primeiro commit de verdade

--- a/index.html
+++ b/index.html
@@ -106,12 +106,14 @@
                         </div>
                     </div>
                     <div class="cardProjects">
-                        <img src="./src/img/slide_2.jpg" alt="Projeto de site" title="Projeto de site" class="imgCard item">
+                        <img src="./src/img/slide_2.jpg" alt="Projeto de site" title="Projeto de site"
+                            class="imgCard item">
                         <h3>Projeto 1 - Front End</h3>
                         <span class="textProjects item">Projeto Corporativo | Site institucional</span>
                         <div class="linkCard item">
                             <a href="#" target="_blank" class="repLink item">
-                                <img src="./src/img/github_white.png" alt="Github" title="Github" class="imgGitHub item">
+                                <img src="./src/img/github_white.png" alt="Github" title="Github"
+                                    class="imgGitHub item">
                                 Repositório
                             </a>
                             <a href="#" target="_blank" class="repLink">
@@ -230,6 +232,11 @@
         </section>
     </main>
 
+    <footer id="end">
+        <section class="firshtSecEnd">
+            
+        </section>
+    </footer>
 </body>
 
 </html>
